--- a/replica_pavia_2018/tex/paper_replicacion_pavia.tex
+++ b/replica_pavia_2018/tex/paper_replicacion_pavia.tex
@@ -77,9 +77,9 @@ Nuestra replicación confirma la robustez de los hallazgos originales mientras q
 
 \subsection{Literatura sobre Revisiones de Cuentas Nacionales}
 
-El análisis de revisiones de cuentas nacionales tiene una rica tradición académica que se remonta a \citet{young1993}. una de las cuestiones fundamentales es que las estimaciones tempranas de agregados económicos enfrentan un trade-off inherente entre puntualidad y precisión, llevando a patrones de revisión sistemáticos que pueden ser analizados y potencialmente predichos.
+El análisis de revisiones de cuentas nacionales tiene una rica tradición académica que se remonta a \citet{young1993}. Es desde este momento cuando ya se señala que una de las cuestiones fundamentales es que las estimaciones tempranas de agregados económicos enfrentan un trade-off inherente entre puntualidad y precisión, llevando a patrones de revisión sistemáticos que pueden ser analizados y potencialmente predichos.
 
-La metodología de análisis de datos en tiempo real, popularizada en el contexto estadounidense por investigadores como Croushore y Stark, trata cada publicación de datos como una fotografía del conjunto de información disponible en un momento específico del tiempo. Este enfoque es crucial porque permite a los analistas recrear el entorno informativo al que se enfrentaban los responsables políticos en el pasado, evitando así juicios anacrónicos basados en datos finales que no estaban disponibles cuando se tomaron las decisiones.
+La metodología de análisis de datos en tiempo real, popularizada en el contexto estadounidense por investigadores como \citet{croushore2001}, trata cada publicación de datos como una fotografía del conjunto de información disponible en un momento específico del tiempo. Este enfoque es crucial porque permite a los analistas recrear el entorno informativo al que se enfrentaban los responsables políticos en el pasado, evitando así juicios anacrónicos basados en datos finales que no estaban disponibles cuando se tomaron las decisiones.
 
 El marco teórico para entender las revisiones fue formalizado por \citet{pavia2017}, quienes adaptaron el enfoque de vintages de Young al contexto español. Su innovación clave fue el análisis sistemático de patrones de revisión a través de trimestres, revelando que:
 
@@ -91,11 +91,36 @@ donde la precisión de las estimaciones iniciales varía sistemáticamente con e
 
 \subsection{Evidencia Internacional de Patrones de Revisión}
 
-La investigación internacional ha revelado patrones de revisión notablemente consistentes entre economías desarrolladas. El análisis del Banco Central Europeo de 2023 sobre Alemania, Francia, Italia y España encontró que las agencias estadísticas minimizan sistemáticamente las revisiones del PIB agregado mientras permiten un reequilibrio significativo entre los componentes del gasto. Este comportamiento refleja las preferencias institucionales para mantener credibilidad a través de cifras principales estables.
+Las revisiones de las cifras del Producto Interno Bruto (PIB) no son meras correcciones, sino una característica intrínseca de la estadística económica que revela las prioridades institucionales de las agencias nacionales. Un análisis comparativo de las prácticas de revisión en la Eurozona, Australia y el Reino Unido ofrece información valiosa para los analistas.
 
-Alemania muestra un sesgo positivo único (0.051 puntos porcentuales) en las revisiones totales del PIB, mientras que Francia e Italia no exhiben sesgos agregados significativos. Sin embargo, todos los países muestran correlaciones negativas fuertes (~50\%) entre las revisiones del comercio neto y las existencias, sugiriendo que las existencias sirven como un "elemento de equilibrio" para compensar las revisiones en otros componentes.
+\subsection*{La Eurozona: Estabilidad Agregada y Reequilibrio Interno}
+Las agencias estadísticas de la Eurozona, particularmente las de Alemania, Francia, Italia y España, muestran un patrón de revisión que minimiza las revisiones agregadas del PIB. Esto se logra mediante un mecanismo de reequilibrio interno entre los componentes del gasto, donde las revisiones del comercio neto y las existencias compensan las fluctuaciones en otros componentes \cite{bce_wp_2857}, \cite{suerf_pb_807}.
+Un análisis del Banco Central Europeo (BCE) sobre Alemania, Francia, Italia y España demuestra que las agencias estadísticas minimizan sistemáticamente las revisiones del PIB agregado para mantener la credibilidad \cite{bce_wp_2857}, \cite{suerf_pb_807}. Esta estabilidad en la cifra principal se logra mediante un reequilibrio significativo entre los componentes del gasto. Específicamente, se observa una fuerte correlación negativa (aproximadamente -50\%) entre las revisiones del comercio neto y las de las existencias. Esto sugiere que las existencias funcionan como un "elemento de equilibrio" para compensar las revisiones en otros componentes, particularmente en el comercio exterior, que es más volátil \cite{bce_wp_2857}.
 
-La Oficina Australiana de Estadísticas reporta revisiones promedio del PIB trimestral de 0.19 puntos porcentuales después de tres años, con las medidas de ingreso y gasto mostrando revisiones mayores que las medidas de producción. El desempeño de Australia supera la mediana de la OCDE, mientras que la Oficina Nacional de Estadísticas del Reino Unido documenta magnitudes de revisión similares (0.14 puntos porcentuales) pero patrones temporales diferentes.
+Aunque Francia e Italia no muestran sesgos agregados significativos, Alemania presenta un sesgo positivo único y persistente en las revisiones totales del PIB \cite{bce_wp_2857}. Este fenómeno puede atribuirse a la estructura de su economía, fuertemente orientada a la exportación, cuyos datos a menudo se revisan al alza a medida que se dispone de información más completa.
+
+\subsection*{Comparativa con Australia y el Reino Unido}
+Fuera de la Eurozona, las agencias de Australia y el Reino Unido muestran prácticas de revisión transparentes que, no obstante, confirman la naturaleza evolutiva de los datos del PIB. La Oficina Australiana de Estadísticas (ABS) informa de una revisión absoluta media del crecimiento trimestral del PIB de 0.19 puntos porcentuales (pp) después de tres años \cite{abs_revisions}. De manera crucial, su análisis revela que las estimaciones iniciales basadas en el gasto y la renta son significativamente menos fiables que las basadas en la producción, ya que se revisan casi el doble \cite{abs_revisions}.
+
+Por su parte, la Oficina Nacional de Estadísticas del Reino Unido (ONS) documenta una magnitud de revisión absoluta media similar, de 0.14 pp \cite{ons_bluebook_2022}. Un estudio de la OCDE sitúa tanto a Australia como al Reino Unido en el nivel superior de países con las revisiones más bajas, lo que sugiere una "primera división" de agencias estadísticas con datos iniciales más fiables \cite{oecd_revisions}.
+
+\begin{table}[h!]
+\centering
+\caption{Resumen Comparativo de Prácticas de Revisión del PIB}
+\label{tab:revision_summary}
+\begin{tabular}{llll}
+\toprule
+\textbf{Característica} & \textbf{Eurozona (Principales 4)} & \textbf{Australia} & \textbf{Reino Unido} \\
+\midrule
+Revisión Absoluta Media & Minimizada a nivel agregado & 0.19 pp & 0.14 pp \\
+Mecanismo de Ajuste & Inventarios vs. Comercio Neto & Conciliación de enfoques & Conciliación SUTs \\
+Sesgo Agregado Notorio & Positivo en Alemania & No significativo & No significativo \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+Así pues, la comprensión de estas dinámicas de revisión es fundamental. Los analistas deben descomponer las cifras agregadas, dar más peso a los datos de producción en las previsiones a corto plazo y considerar la fiabilidad de la fuente estadística.
+
 
 \subsection{Innovaciones Metodológicas Post-2017}
 
