--- a/replica_pavia_2018/tex/referencias.bib
+++ b/replica_pavia_2018/tex/referencias.bib
@@ -216,3 +216,44 @@
     year={2013},
     publisher={Taylor \\& Francis}
 }
+
+@techreport{bce_wp_2857,
+  author    = {Asimakopoulos, Stylianos and Paredes, Joan and Tsiaplias, Stylianos},
+  title     = {What do data revisions tell us about GDP?},
+  institution = {European Central Bank},
+  year      = {2023},
+  number    = {2857},
+  type      = {Working Paper Series}
+}
+
+@article{suerf_pb_807,
+  author    = {Asimakopoulos, Stylianos and Paredes, Joan and Tsiaplias, Stylianos},
+  title     = {What do data revisions tell us about GDP?},
+  journal   = {SUERF Policy Brief},
+  year      = {2024},
+  number    = {807},
+  institution = {SUERF - The European Money and Markets Forum}
+}
+
+@techreport{abs_revisions,
+  author    = {{Australian Bureau of Statistics}},
+  title     = {Analysis of Revisions to Gross Domestic Product},
+  institution = {Australian Bureau of Statistics},
+  year      = {2021},
+  month     = {October}
+}
+
+@article{ons_bluebook_2022,
+  author    = {{Office for National Statistics}},
+  title     = {GDP revisions in Blue Book 2022},
+  journal   = {Office for National Statistics Articles},
+  year      = {2022}
+}
+
+@techreport{oecd_revisions,
+  author    = {Di Fonzo, Tommaso},
+  title     = {Interim results from a revisions analysis of quarterly GDP in 18 OECD countries},
+  institution = {Organisation for Economic Co-operation and Development (OECD)},
+  year      = {2009},
+  type      = {Statistics Directorate Working Paper}
+}
