--- a/replica_pavia_2018/tex/paper_replicacion_pavia.tex
+++ b/replica_pavia_2018/tex/paper_replicacion_pavia.tex
@@ -79,9 +79,9 @@ Nuestra replicación confirma la robustez de los hallazgos originales mientras q
 
 El análisis de revisiones de cuentas nacionales tiene una rica tradición académica que se remonta a \citet{young1993}. Es desde este momento cuando ya se señala que una de las cuestiones fundamentales es que las estimaciones tempranas de agregados económicos enfrentan un trade-off inherente entre puntualidad y precisión, llevando a patrones de revisión sistemáticos que pueden ser analizados y potencialmente predichos.
 
-La metodología de análisis de datos en tiempo real, popularizada en el contexto estadounidense por investigadores como \citet{croushore2001}, trata cada publicación de datos como una fotografía del conjunto de información disponible en un momento específico del tiempo. Este enfoque es crucial porque permite a los analistas recrear el entorno informativo al que se enfrentaban los responsables políticos en el pasado, evitando así juicios anacrónicos basados en datos finales que no estaban disponibles cuando se tomaron las decisiones.
+A lo largo del tiemoo se desarrollaron diferentes metodologías de análisis de datos en tiempo real, una de las cuáles fue popularizada en el contexto estadounidense por investigadores como \citet{croushore2001}. En su trabajo, estos autores tratan cada publicación de datos como una fotografía del conjunto de información disponible en un momento específico del tiempo. Sin duda, este enfoque es crucial porque permite a los analistas recrear el entorno informativo al que se enfrentaban los responsables políticos en el pasado, evitando así juicios anacrónicos basados en datos finales que no estaban disponibles cuando se tomaron las decisiones.Solo de este modo es posible analizar la generación de sesgos en las estimaciones derivadas por los contextos que definieron aquellos momentos.
 
-El marco teórico para entender las revisiones fue formalizado por \citet{pavia2017}, quienes adaptaron el enfoque de vintages de Young al contexto español. Su innovación clave fue el análisis sistemático de patrones de revisión a través de trimestres, revelando que:
+El marco teórico para entender las revisiones fue formalizado para España por \citet{pavia2017}, quienes adaptaron el enfoque de vintages de Young al contexto de las estimaciones de la Contabilidad Trimestral del Instituto Nacional de Estadística de España (INE). La innovación clave de este trabajo fue el análisis sistemático de patrones de revisión a través de trimestres, revelando que:
 
 \begin{equation}
 \text{Precisión} = f(\text{Estimación Inicial} - \text{Estimación Final})
@@ -91,18 +91,17 @@ donde la precisión de las estimaciones iniciales varía sistemáticamente con e
 
 \subsection{Evidencia Internacional de Patrones de Revisión}
 
-Las revisiones de las cifras del Producto Interno Bruto (PIB) no son meras correcciones, sino una característica intrínseca de la estadística económica que revela las prioridades institucionales de las agencias nacionales. Un análisis comparativo de las prácticas de revisión en la Eurozona, Australia y el Reino Unido ofrece información valiosa para los analistas.
+Pero la evidencia nos señala que las revisiones de las cifras del Producto Interno Bruto (PIB) no son meras correcciones ante la llegada de información que completa la previa fakta de ella, sino que representa además una característica intrínseca de la estadística económica que revela las prioridades institucionales de las agencias nacionales. Así, un análisis comparativo de las prácticas de revisión en la Eurozona, Australia y el Reino Unido ofrece información valiosa para los analistas.
 
 \subsection*{La Eurozona: Estabilidad Agregada y Reequilibrio Interno}
-Las agencias estadísticas de la Eurozona, particularmente las de Alemania, Francia, Italia y España, muestran un patrón de revisión que minimiza las revisiones agregadas del PIB. Esto se logra mediante un mecanismo de reequilibrio interno entre los componentes del gasto, donde las revisiones del comercio neto y las existencias compensan las fluctuaciones en otros componentes \cite{bce_wp_2857}, \cite{suerf_pb_807}.
-Un análisis del Banco Central Europeo (BCE) sobre Alemania, Francia, Italia y España demuestra que las agencias estadísticas minimizan sistemáticamente las revisiones del PIB agregado para mantener la credibilidad \cite{bce_wp_2857}, \cite{suerf_pb_807}. Esta estabilidad en la cifra principal se logra mediante un reequilibrio significativo entre los componentes del gasto. Específicamente, se observa una fuerte correlación negativa (aproximadamente -50\%) entre las revisiones del comercio neto y las de las existencias. Esto sugiere que las existencias funcionan como un "elemento de equilibrio" para compensar las revisiones en otros componentes, particularmente en el comercio exterior, que es más volátil \cite{bce_wp_2857}.
+Por ejemplo, un análisis del Banco Central Europeo (BCE) sobre Alemania, Francia, Italia y España demuestra que las agencias estadísticas minimizan sistemáticamente las revisiones del PIB agregado para mantener la credibilidad \cite{bce_wp_2857}, \cite{suerf_pb_807}. Esta estabilidad en la cifra principal se logra mediante un reequilibrio significativo entre los componentes del gasto. Específicamente, se observa una fuerte correlación negativa (aproximadamente -50\%) entre las revisiones del comercio neto y las de las existencias. Esto sugiere que las existencias funcionan como un "elemento de equilibrio" para compensar las revisiones en otros componentes, particularmente en el comercio exterior, que es más volátil \cite{bce_wp_2857}.
 
 Aunque Francia e Italia no muestran sesgos agregados significativos, Alemania presenta un sesgo positivo único y persistente en las revisiones totales del PIB \cite{bce_wp_2857}. Este fenómeno puede atribuirse a la estructura de su economía, fuertemente orientada a la exportación, cuyos datos a menudo se revisan al alza a medida que se dispone de información más completa.
 
 \subsection*{Comparativa con Australia y el Reino Unido}
 Fuera de la Eurozona, las agencias de Australia y el Reino Unido muestran prácticas de revisión transparentes que, no obstante, confirman la naturaleza evolutiva de los datos del PIB. La Oficina Australiana de Estadísticas (ABS) informa de una revisión absoluta media del crecimiento trimestral del PIB de 0.19 puntos porcentuales (pp) después de tres años \cite{abs_revisions}. De manera crucial, su análisis revela que las estimaciones iniciales basadas en el gasto y la renta son significativamente menos fiables que las basadas en la producción, ya que se revisan casi el doble \cite{abs_revisions}.
 
-Por su parte, la Oficina Nacional de Estadísticas del Reino Unido (ONS) documenta una magnitud de revisión absoluta media similar, de 0.14 pp \cite{ons_bluebook_2022}. Un estudio de la OCDE sitúa tanto a Australia como al Reino Unido en el nivel superior de países con las revisiones más bajas, lo que sugiere una "primera división" de agencias estadísticas con datos iniciales más fiables \cite{oecd_revisions}.
+Por su parte, la Oficina Nacional de Estadísticas del Reino Unido (ONS) documenta una magnitud de revisión absoluta media similar, de 0.14 pp \cite{ons_bluebook_2022}. Junto a ello, un estudio de la OCDE sitúa tanto a Australia como al Reino Unido en el nivel superior de países con las revisiones más bajas, lo que sugiere una "primera división" de agencias estadísticas con datos iniciales más fiables \cite{oecd_revisions}.
 
 \begin{table}[h!]
 \centering
@@ -120,11 +119,11 @@ Sesgo Agregado Notorio & Positivo en Alemania & No significativo & No significat
 \end{table}
 
 Así pues, la comprensión de estas dinámicas de revisión es fundamental. Los analistas deben descomponer las cifras agregadas, dar más peso a los datos de producción en las previsiones a corto plazo y considerar la fiabilidad de la fuente estadística.
-
+[REVISAR ESTA IDEA]
 
 \subsection{Innovaciones Metodológicas Post-2017}
 
-El campo ha evolucionado dramáticamente más allá de las medidas básicas de Error Absoluto Medio (EAM) y sesgo, incorporando técnicas econométricas sofisticadas y de aprendizaje automático. El análisis de datos de añadas utilizando el marco de Mankiw-Shapiro distingue entre "noticias" (nueva información) y "ruido" (errores de medición), revelando que la mayoría de las revisiones reflejan actualizaciones genuinas de información en lugar de inadecuaciones estadísticas.
+Desde el trabajo de Pavía et al. el campo ha evolucionado dramáticamente más allá de las medidas básicas de Error Absoluto Medio (EAM) y sesgo, incorporando técnicas econométricas sofisticadas y de aprendizaje automático. El análisis de datos de añadas utilizando el marco de Mankiw-Shapiro distingue entre "noticias" (nueva información) y "ruido" (errores de medición), revelando que la mayoría de las revisiones reflejan actualizaciones genuinas de información en lugar de inadecuaciones estadísticas.
 
 Las aplicaciones de aprendizaje automático han mostrado particular promesa, con métodos de conjunto que combinan múltiples modelos demostrando rendimiento superior durante períodos estables. Random Forest, XGBoost y las redes neuronales capturan patrones de revisión no lineales que los métodos tradicionales no detectan, aunque tienen dificultades con eventos sin precedentes como COVID-19.
 
@@ -132,7 +131,7 @@ Los enfoques de series temporales utilizando modelos ARIMA y Autorregresión Vec
 
 \subsection{Patrones Estacionales en Errores de Revisión}
 
-\citet{pavia2017} hipotetizaron y confirmaron que las estimaciones del cuarto trimestre exhibirían precisión superior debido a:
+Concretando para el caso español, \citet{pavia2017} hipotetizaron y confirmaron que las estimaciones del cuarto trimestre exhibirían precisión superior debido a:
 
 \begin{itemize}
 \item Horizonte de predicción más corto (más cercano a datos de cuentas anuales)
